Fix chevron gap on mobile

--- a/src/components/RideListHeader.sass
+++ b/src/components/RideListHeader.sass
@@ -39,7 +39,7 @@
 
 .downChevron
   position: absolute
-  top: -2px // because svgs have a weird gap
+  top: -8px // because svgs have a weird gap
   right: 0
   left: 0
   width: 100%
